# HaloosinEngine

./: CMakeLists.txt  Generate-Build.bat  README.md  vcpkg-configuration.json  vcpkg.json  vcpkg.json.txt
include/Asset/: Model.h  ModelLibrary.h  ModelReference.h  Shader.h  ShaderLibrary.h  ShaderReference.h  Texture.h
include/Core/: Camera.h  Game.h  Input.h  Procedure.h  Scene.h  SystemManager.h  Time.h  WindowManager.h
include/CoreComponents/: CameraComponents.h  CoreComponents.h  LightComponents.h  RenderComponents.h
include/Logger/: Logger.h
include/Math/: Vector3.h  VectorMath.h
include/Render/: GLBuffer.h  Mesh.h  Render.h
include/Serialize/: Reflector.h  SceneSerializer.h  SerialPrintHelpers.h  Serializable.h  SerializeProcedure.h
src/Asset/: Model.cpp  Model.h  ModelLibrary.cpp  ModelLibrary.h  ModelReference.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  ShaderReference.h  Texture.cpp
src/Core/: Camera.cpp  Camera.h  Game.cpp  Game.h  Input.cpp  Procedure.h  Scene.cpp  Scene.h  SystemManager.h  WindowManager.cpp  WindowManager.h  World.h  glad.c  glad.h
src/CoreComponents/: CameraComponents.h  RenderComponents.h
src/Logger/: Logger.cpp  Logger.h
src/Math/: Vector3.h  VectorMath.h
src/Render/: DefineSTBI.cpp  GLBuffer.cpp  Mesh.cpp  Mesh.h  Render.cpp  Render.h
src/Serialize/: SceneSerializer.cpp  SceneSerializer.h  SerialPrintHelpers.h  Serializable.cpp  Serializable.h  SerializeProcedure.h
